; ModuleID = '/home/carl/AnghaBench/qmk_firmware/keyboards/cannonkeys/stm32f072/extr_keyboard.c_eeprom_init_kb.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/keyboards/cannonkeys/stm32f072/extr_keyboard.c_eeprom_init_kb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @eeprom_init_kb() #0 {
  %1 = call i64 (...) @eeprom_is_valid()
  %2 = icmp ne i64 %1, 0
  br i1 %2, label %3, label %5

3:                                                ; preds = %0
  %4 = call i32 (...) @load_custom_config()
  br label %8

5:                                                ; preds = %0
  %6 = call i32 (...) @save_backlight_config_to_eeprom()
  %7 = call i32 @eeprom_set_valid(i32 1)
  br label %8

8:                                                ; preds = %5, %3
  ret void
}

declare dso_local i64 @eeprom_is_valid(...) #1

declare dso_local i32 @load_custom_config(...) #1

declare dso_local i32 @save_backlight_config_to_eeprom(...) #1

declare dso_local i32 @eeprom_set_valid(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
